# bank-csv

./: .flake8  .gitignore  .pre-commit-config.yaml  BankCSVExtractor.spec  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  main.py  pyproject.toml  pytest.ini  requirements.txt
config/: __init__.py  logging_config.py  settings.ini  settings.ini.template
docs/: WIKI.md
src/: __init__.py
src/controllers/: __init__.py  app_controller.py
src/models/: __init__.py  csv_writer.py  data_models.py  excel_writer.py  extractor_ia.py
src/utils/: __init__.py  error_handler.py  helpers.py
src/views/: __init__.py  main_window.py
tests/: __init__.py  test_basic.py
